tests/baselines/reference/parserES5ForOfStatement21.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement21.ts (1 errors) ====
    for (var of of) { }
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.